--- a/themes/hemingway17/sass/style.sass
+++ b/themes/hemingway17/sass/style.sass
@@ -1,4 +1,5 @@
-$blue: #2077b2
+//$blue: #2077b2
+$blue: #c32898
 $primary: $blue
 $grey-dark: #42464c
 $family-sans-serif: "Hiragino Kaku Gothic Pro", "Meiryo", YuGothic, sans-serif
@@ -137,3 +138,15 @@ article+article
 .section,
 .nav
   background-color: #fcfcfc;
+
+.nav-item-label
+  display: none;
+
+.button.is-disabled
+  opacity: 0.7;
+
+.content a:not(.button):visited
+  color: $primary;
+
+.content a:not(.button):hover
+  color: #222324;
