--- a/themes/hemingway17/layouts/partials/header.html
+++ b/themes/hemingway17/layouts/partials/header.html
@@ -15,7 +15,7 @@
     {{ else }}
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/default.min.css" integrity="sha256-Zd1icfZ72UBmsId/mUcagrmN7IN5Qkrvh75ICHIQVTk=" crossorigin="anonymous" />
     {{ end }}
-    <link rel="shortcut icon" href="/favicon.ico?v2">
+    <link rel="shortcut icon" href="/favicon.ico">
 </head>
 
 <body>
