--- a/themes/hemingway17/layouts/partials/footer_article.html
+++ b/themes/hemingway17/layouts/partials/footer_article.html
@@ -1,2 +1,2 @@
 
-<script src="{{ .Site.BaseURL }}javascripts/hemingway17.js"></script>
+<script src="{{ .Site.BaseURL }}/javascripts/hemingway17.js"></script>
